<resources>
    <string name="app_name">MobilePOS</string>
    <string name="action_settings">Settings</string>
    <string name="tv_barcode">Barcode</string>
    <string name="tv_quantity">Quantity</string>
    <string name="tv_mer">Name</string>
    <string name="bt_add">Add</string>
    <string name="bt_clear">Clear</string>
    <string name="tv_label_list_mer">Merchandise Orders</string>
    <string name="title_activity_order_merchandise_form">OrderMerchandiseForm</string>
    <string name="title_activity_order_mer">OrderMerActivity</string>
    <string name="type_discount">Discount: Value Or Percent</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="about">About</string>
    <string name="bt_submit">Submit</string>
    <string name="title_activity_order_form">OrderFormActivity</string>
    <string name="tv_trans_type">Transaction Type</string>
    <string name="inventory">Inventory</string>
    <string name="btn_next">Next</string>
</resources>
