<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="vn.daisy.order.OrderMerActivity"
    tools:showIn="@layout/order_merchandise_form">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tv_label_barcode"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/tv_font_size"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:text="@string/tv_barcode"/>


            <TextView
                android:id="@+id/tv_id_barcode"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/tv_font_size"
                android:layout_height="@dimen/tv_label_height"
                android:textColor="@color/blue"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/tv_label_barcode"/>
            <TextView
                android:id="@+id/tv_label_mer"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:layout_below="@id/tv_label_barcode"
                android:textSize="@dimen/tv_font_size"
                android:gravity="center_vertical"
                android:textColor="@color/red"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:text="@string/tv_mer"/>
            <TextView
                android:id="@+id/tv_id_mer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_label_height"
                android:layout_toRightOf="@id/tv_label_mer"
                android:layout_below="@id/tv_label_barcode"
                android:gravity="center_vertical"
                android:textSize="@dimen/tv_font_size"
                android:textStyle="italic"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/tv_label_quantity"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:textSize="@dimen/tv_font_size"
                android:layout_below="@+id/tv_label_mer"
                android:textColor="@color/red"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:text="@string/tv_quantity"/>
            <EditText
                android:id="@+id/et_id_quantity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_label_height"
                android:layout_toRightOf="@id/tv_label_quantity"
                android:textSize="@dimen/tv_font_size"
                android:textStyle="italic"
                android:textColor="@color/blue"
                android:inputType="number"
                android:layout_below="@id/tv_label_mer"/>
            <CheckBox
                android:id="@+id/cb_type_discount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:text="@string/type_discount"
                android:gravity="center_vertical"
                android:textSize="@dimen/tv_font_size"
                android:textColor="@color/red"
                android:checked="true"
                android:layout_below="@+id/tv_label_quantity"/>

            <TextView
                android:id="@+id/tv_label_discount"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:textSize="@dimen/tv_font_size"
                android:layout_below="@+id/cb_type_discount"
                android:textColor="@color/red"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:text="@string/discount"/>
            <EditText
                android:id="@+id/et_discount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_label_height"
                android:layout_toRightOf="@id/tv_label_discount"
                android:textSize="@dimen/tv_font_size"
                android:textStyle="italic"
                android:textColor="@color/blue"
                android:inputType="number"
                android:layout_below="@id/cb_type_discount"/>
            <TextView
                android:id="@+id/tv_label_about"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:textSize="@dimen/tv_font_size"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_label_discount"
                android:text="@string/about"/>

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:textSize="@dimen/tv_font_size"
                android:layout_height="@dimen/tv_label_height"
                android:textColor="@color/blue"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:layout_below="@+id/tv_label_discount"
                android:layout_toRightOf="@id/tv_label_about"/>


            <TextView
                android:id="@+id/tv_label_total"
                android:layout_width="@dimen/tv_label_width"
                android:layout_height="@dimen/tv_label_height"
                android:textSize="@dimen/tv_font_size"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_label_about"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:textSize="@dimen/tv_font_size"
                android:layout_height="@dimen/tv_label_height"
                android:textColor="@color/blue"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:layout_below="@+id/tv_label_about"
                android:layout_toRightOf="@id/tv_label_total"/>

            <TableLayout
                android:id="@+id/tl_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_below="@+id/tv_label_total">

                <TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_height"
                        android:textColor="@color/red"
                        android:textSize="@dimen/bt_font_size"
                        android:background="@drawable/commonbutton"
                        android:text="@string/bt_clear"
                        android:onClick="btnClearClick"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bt_height"
                        android:textColor="@color/red"
                        android:textSize="@dimen/bt_font_size"
                        android:background="@drawable/commonbutton"
                        android:text="@string/bt_add"
                        android:onClick="btnAddClick"
                        />
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:id="@+id/ll_label"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_below="@+id/tl_button"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/tv_label_height"
                    android:text="@string/tv_label_list_mer"
                    android:textColor="@color/red"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/tv_font_size"/>
                <ImageButton
                    android:id="@+id/bt_id_delete"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:src="@drawable/delete"
                    android:onClick="btnDeleteClick"

                    />


            </LinearLayout>
            <ScrollView
                android:id="@+id/sv_listview"
                android:layout_below="@+id/ll_label"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lv_height">
                <ListView
                    android:id="@+id/lv_list_mer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/lv_height"
                    android:layout_alignParentBottom="true"
                    >
                </ListView>

            </ScrollView>
            <Button
                android:id="@+id/btn_id_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:textColor="@color/red"
                android:textSize="@dimen/bt_font_size"
                android:background="@drawable/commonbutton"
                android:layout_below="@+id/sv_listview"
                android:text="@string/bt_submit"
                android:onClick="btnSubmitClick"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
